--- a/trainig_log/250424.md
+++ b/trainig_log/250424.md
@@ -88,7 +88,7 @@
     
 ## 💻 실습 예시
 
-### Javascript(web)
+### Java
 
 - [literal](../src/main/java/com/variable/section1/literal)
 - [variable](../src/main/java/com/variable/section1/variable)
