--- a/trainig_log/250425.md
+++ b/trainig_log/250425.md
@@ -11,15 +11,55 @@
     - 대문자 혹은 숫자만 사용한다.
     - 단어와 단어 연결은 언더스코어를 사용한다.
 - overflow 
-  - 
+  - 발생한 carry를 버림처리하고 sign bit를 반전시켜 최소값으로 순환시킴
+  - byte의 경우 : 01111111(127) + 1 -> 1000000(-128)
+- underflow
+  - 오버플로우와 반대 개념으로 최소 범위보다 작은 수를 발생시킨 경우 발생
+  - byte의 경우 : 1000000(-128) - 1 -> 01111111(127)
+- 형변환
+  - 자동 형변환
+    - 작은 자료형에서 큰 자료형으로 공간만 옮기는 경우 데이터 손실이 발생하지 않고 자동 형변환이 일어난다.
+    - 정수끼리의 자동 형변환 : 데이터 손실 없이 가능하다
+    - 실수끼리의 자동 형변환 : 데이터 손실 없이 가능하다
+    - 정수 -> 실수의 자동 형변환 : 정수를 실수로 변경할 때 소수점 자리수가 없어도 실수형태로 표현이 가능하다.
+    - 문자형의 자동 형변환 : int형으로 자동 형변환된다.
+    - 논리형은 형변환 규칙에서 제외된다.
+  - 강제 형변환
+    - 큰 자료형에서 작은 자료형으로 변환하는 경우 강제 형변환을 할 수 있다.
+    - 단, 의도하지 않은 데이터의 손실을 주의 해야 된다. (실수 -> 정수의 경우 의도적으로 소수점에 대한 데이터 손실을 발생시킬 수 있다.)
+      
+- 연산자
+  - 산술 연산자 : '+', '-',  '*', '/' ,'%'
+  - 대입 연산자 : '=', 산술 대입('+=', '-=', '/=', '*=')
+  - 증감 연산자 : '++', '--'
+  - 비교 연산자 : '>', '>=', '<', '<=',
+  - 논리 연산자 : '&&', '||' (우선 순위는 and 연산자가 or 연산자 보다 더 높다)
+  - 삼항 연산자 : (조건식) ? 참일 때 사용할 값 : 거짓일 때 사용할 값
+- 메소드 : 어떤 특정 작업을 수행하기 위한 명령문의 집합
+  - 메소드 선언 및 호출
+  ````
+  // 클래스명 사용할 이름 = new 클래스명(); // 객체 생성
+  // 사용할이름.메소드명(); // 메소드 호출
+  
+  Application1 app1 = new Application1(); // 객체 생성
+  app1.methodA(); // 메소드 호출
+  ````
+  - 메소드 호출 흐름
+    - return 문에 의해 자신을 호출한 구문으로 다시 돌아간다. 
+  - 매개 변수를 이용한 메소드 호출
+    - 매개 변수가 여러 개일 경우 그 개수와 순서를 지켜줘야 한다.
+  - 메소드 리턴
+    - public 뒤에 바로 return으로 가지고 갈 타입을 명시한다.
+    - 아무것도 return 하지 않는 경우 void, 값을 반환하는 경우에는 반환값의 자료형을 작성해야 한다.
+
 ## 💻 실습 예시
 
-### Javascript(web)
+### Java
 
-- [literal](../src/main/java/com/variable/section1/literal)
-- [variable](../src/main/java/com/variable/section1/variable)
+- [operator](../src/main/java/com/operator)
+- [method](../src/main/java/com/method)
 
 ## ✍️ 오늘의 회고
-
-- 오늘은 Java에서의 리터럴과 변수 개념을 중심으로 학습하며, 프로그래밍의 기초적인 구성 요소에 대한 이해를 넓힐 수 있던 하루였다.
-- sout과 soutv를 활용한 출력 연습을 통해 다양한 형태의 데이터를 출력해보며 각 자료형의 특성을 익히는 데 도움이 되었다.
+- 형변환 부분에서 자동과 강제의 차이를 명확히 알게 되었고, overflow와 underflow 개념은 메모리 구조를 이해하는 데 흥미로웠다.
+- 메소드 선언과 호출에 대한 실습은 Java에서의 객체지향적인 접근 방식을 체감할 수 있어서 유익했다. 
+- 메소드를 호출하고 return 문을 통해 다시 돌아가는 흐름이 명확히 이해되어, 실제로 메소드를 잘 활용할 수 있을 것 같은 자신감이 생겼다.
