--- a/trainig_log/250508.md
+++ b/trainig_log/250508.md
@@ -5,9 +5,7 @@
 ### Java
 
 - 상속
-  - 부모 클래스가 
-  - 가지
-  - 고 있는 멤버를 자식 클래스가 확장하여 자신의 멤버인 것처럼 사용할 수 있는 것
+  - 부모 클래스가 가지고 있는 멤버를 자식 클래스가 확장하여 자신의 멤버인 것처럼 사용할 수 있는 것
   - 부모 클래스의 멤버를 물려 받아 자신의 것처럼 사용하는 것뿐만 아니라 추가적인 멤버 작성이 가능하다.
   - 장점
     - 새로운 클래스 작성 시 기존에 작성항 클래스를 재사용하여 생산성과 유지보수성을 향상시킨다.
