--- a/trainig_log/250502.md
+++ b/trainig_log/250502.md
@@ -19,7 +19,7 @@
     - protected : 동일 패키지에 접근 허용. 단, 상속관계에 있는 경우 다른 패키지에서도 접근 가능 
     - default : 동일 패키지에서만 접근 허용 (보통 작성하지 않는다.)
     - private : 해당 클래스 내부에서만 접근 허용
-- 객체 지향 특징 2 : 추상화(abstraction)
+- 추상화(abstraction)
   - 유연성을 확보하기 위해 공통적인 것을 추출하고 공통적이지 않은 것을 제거하는 것
   - 행동을 통한 추상화 기법과 데이터를 통한 추상화 기법이 있다.
   - DTO(Data Transfer Object) : 데이터를 통한 추상화 기법
