--- a/trainig_log/250509.md
+++ b/trainig_log/250509.md
@@ -50,14 +50,23 @@
   - 상수 필드만 작성이 가능하기 때문에 반드시 선언과 동시에 초기화 해줘야 한다.
   - 인터페이스에서의 모든 필드는 묵시적으로 `public static final`이다.
   - 인터페이스는 생성자를 가질 수 없다.
-  - 인터페이스는 구현부가 있는 non-static 메소드를 가질 수 없고 추상 메소드와 static 메소드만 사용 가능하다.
-  - 단, default 키워드를 사용하면 non-static 메소드도 작성 가능하다.
-  - 인터페이스의 default 메소드
+  - 인터페이스의 메소드
+    - 인터페이스 안에 작성한 메소드는 묵시적으로 `public abstract`의 의미를 가진다.
+    - 따라서 인터페이스의 메소드를 오버라이딩 해야 하는 경우 반드시 접근 제한자를 public으로 해야 오버라이딩이 가능하다.
+    - 인터페이스는 구현부가 있는 non-static 메소드를 가질 수 없다.
+    - 추상 메소드와 static 메소드만 사용 가능하다.
+    - 단, default 키워드를 사용하면 non-static 메소드도 작성 가능하다.
+  - 인터페이스의 메소드 오버라이딩
+    - 추상 메소드는 오버라이딩이 가능하다.
+    - static 메소드와 default 메소드는 오버라이딩 할 수 없다.
+    - 단, default 키워드를 제외하면 가능하다.
+  - 인터페이스의 default 키워드
     - 의미: 인터페이스에 실제 구현이 포함된 메소드를 정의할 수 있게 함
     - 목적: 인터페이스에 새 기능을 추가하면서 기존 구현체들의 호환성을 유지
     - 특징: non-static 메소드이며 구현 클래스에서 재정의 가능
-  - 인터페이스 안에 작성한 메소드는 묵시적으로 public abstract의 의미를 가진다.
-  - 따라서 인터페이스의 메소드를 오버라이딩 해야 하는 경우 반드시 접근 제한자를 public으로 해야 오버라이딩이 가능하다.
+  - 인터페이스의 상속
+    - 인터페이스는 상속 받을 때에는 Implements 키워드를 사용하며 여러 개를 상속 받을 수 있다.
+    - extends로 다른 클래스를 상속받는 경우에도 추가로 인터페이스 상속이 가능하다. (`public class Product extends Object implements InterProduct`)
   - 인터페이스 사용 이유
     - 추상 클래스와 비슷하게 필요한 기능을 공통화해서 강제성을 부여할 수 있다.
     - 자바의 단일 상속의 단점을 극복할 수 있다. 즉, 다중 상속이 가능하다.
