--- a/trainig_log/250512.md
+++ b/trainig_log/250512.md
@@ -138,17 +138,46 @@
     - ArrayList
       - 내부적으로 배열을 이용하여 요소를 관리하며, 배열의 단점을 보완하기 위해 만들어졌다.
       - 배열은 크기를 변경할 수 없고, 요소의 추가, 삭제, 정렬 등이 복잡하다는 단점을 가지고 있다.
-      - 크기 변경, 요소의 추가, 삭제, 정렬 기능들을 미리 메소드로 구현해서 제공
+      - 크기 변경, 요소의 추가, 삭제, 정렬 기능들을 미리 메소드로 구현해서 제공(단, 자동적으로 수행되는 것일 뿐 속도가 빨라지는 것은 아니다.)
+      - 사용예시
+        ````
+        ArrayList alist = new ArrayList<>(); // 내부적으로 10칸짜리의 배열이 생성된 것, alist는 객체를 담는 배열이다.
+        List list = new ArrayList<>(); // List를 구현한 것이므로 다형성으로 생성할 수도 있다.
+        Collection col = new ArrayList<>(); // 더 상위 클래스인 Collection을 통해서도 만들 수 있다.
+        ````
+      - 메소드 
+        - `.add(value)` : 
+          - 리스트에 값 추가
+          - 값이 추가되는 순서대로 리스트에 추가된다.
+          - 인덱스가 다른 위치에 값이 저장되고 있으면 값의 중복 저장이 가능
+          - `List<String> stringList = new ArrayList<>();`와 같이 타입을 지정해 놓았을 때 올바르지 않은 타입의 값을 넣으면 컴파일 에러가 발생한다.
+        - `.add(index, element)` : 해당 인덱스에 요소 추가
+        - `.size()` : 리스트의 크기 (값의 개수)
+        - `.get(index)` : 해당 인덱스의 리스트 요소 반환
+        - `.remove(index)` : 해당 인덱스의 값 제거
+        - `Collections.sort(stringList)` : Collections의 객체의 오름차순 정렬 메소드
+      - ArrayList의 용량
+        - 별도로 ArrayList의 크기를 지정해주지 않으면 default 값으로 10칸짜리 배열이 만들어진다.
+        - 용량은 동적으로 변하기 때문에 더 크게 또는 더 작게도 만들 수 있다.
+        - 별도로 용량을 확인할 수 있는 메소드는 없다.
+        - 여기서 size() 메소드는 ArrayList에 들어가 있는 요소의 개수를 반환하는 메소드이다.
+      - ArrayList의 내림차순 정렬
+        - 오름차순 정렬은 Collections의 `sort()` 메소드를 사용하면 되지만, 내림차순은 별도의 메소드가 없다.
+        - 하지만 Collection 인터페이스의 iterator() 메소드를 이용하여 인스턴스를 생성한뒤 `descendingIterator()` 메소드를 사용하여 정렬할 수 있다.
+        - `descendingIterator()`은 Iterator을 반환한다.
+      - Iterator란?
+        - 컬렉션에서 값을 읽어오는 방식을 통일된 방식으로 제공하기 위해 사용한다.
+        - Iterator은 값을 한 번 꺼내면 다시 값을 꺼낼 때 빈 값을 반환한다.
+        - `hasNext()` : 다음 요소를 가지고 있는 경우 true, 더 이상 요소가 없는 경우 false 반환
+        - `next()` : 다음 요소를 반환
 ## 💻 실습 예시
 
 ### Java
-- [다형성](../src/main/java/com/chapter09_polymorphism/polymorphism)
-- [추상 클래스](../src/main/java/com/chapter09_polymorphism/abstractclass)
-- [인터페이스](../src/main/java/com/chapter09_polymorphism/interfaceimplements)
-- [오늘의 실습 문제 : 커피 주문 시스템](https://github.com/SerahKim/java-coffee_order-projcet)
+- [API](../src/main/java/com/chapter10_api)
+- [제네릭](../src/main/java/com/chapter11_generics)
+- [Collection Framework](../src/main/java/com/chapter12_collection)
+- [오늘의 팀 문제](../src/main/java/com/team_problem/section_250512)
 
 ## ✍️ 오늘의 회고
-- 오늘은 자바 객체 지향 프로그래밍에서 중요한 개념인 다형성, 추상화, 그리고 인터페이스에 대해 학습했다. 특히 다형성에서는 업캐스팅과 다운캐스팅의 차이점과 사용법을 명확히 이해할 수 있었다.
-- 실습으로 진행한 커피 주문 시스템 프로젝트는 객체 지향 설계를 실제로 구현해보는 좋은 경험이었다. 특히 각 커피 메뉴를 자식 클래스로 만들고,
-  공통 기능을 추상 클래스인 Coffee에서 정의해보면서 추상 클래스 사용 의도에 대해 다시 한번 생각해보았다.
-- 이번 실습을 통해 객체 지향 설계를 코드에 실제로 녹여내는 과정에서 설계가 얼마나 중요한지 다시 한번 느꼈다. 클래스 간의 관계 설정, 공통 속성과 동작의 추출, 그리고 책임 분리가 프로그램의 유지보수성과 확장성에 큰 영향을 미친다는 점을 실감했다.
+- 오늘은 자바의 문자열 처리와 관련된 String, StringBuilder, StringBuffer 클래스의 특성과 메서드를 집중적으로 학습했다. 특히 문자열의 불변성과 가변 객체 사용 시 성능 및 스레드 안전성의 차이에 대해 명확히 이해할 수 있었다. 
+- 오늘 배운 내용은 이후 객체지향 프로그래밍이나 실무 코드 작성에 매우 핵심적인 개념이라, 복습을 꾸준히 해둘 필요성을 느꼈다. 특히 List, Map, Set 구조의 차이와 사용법은 직접 코딩하면서 익숙해질 수 있도록 연습이 필요할 것 같다.
