--- a/trainig_log/250513.md
+++ b/trainig_log/250513.md
@@ -4,7 +4,7 @@
 
 ### Java
 - Java Collection FrameWork(JCF)
-      ![image](https://velog.velcdn.com/images/rssungjae/post/c9d4ffd5-efd8-4446-8623-26098dc77caa/image.png)
+      ![image](https://images.velog.io/images/simjayeon/post/d8ab0057-64a6-4baa-b37e-07b2642335fd/collmap.png)
   - 자바에서 다양한 자료구조를 쉽게 사용할 수 있게 만들어 놓은 표준화된 클래스의 모음
   - **컬렉션 프레임워크에 저장할 수 있는 데이터는 오로지 객체(Object) 뿐이다.**
   - 따라서 자바의 primitive 타입을 wrapper 클래스로 박싱하여 저장하여야함. null도 저장이 가능하다.
