--- a/trainig_log/250430.md
+++ b/trainig_log/250430.md
@@ -19,6 +19,7 @@
   - 배열의 할당 방법
       ````
       // 변수명 = new 자료형[배열 길이]
+      int[] iarr;
       iarr = new int[5];
       
       // 자료형[] 변수명 = new 자료형[배열 길이] (선언과 할당 동시에)
