--- a/trainig_log/250507.md
+++ b/trainig_log/250507.md
@@ -4,7 +4,7 @@
 
 ### Java
 
-- 오버로딩(overlading)
+- 오버로딩(overloading)
   - 원래 동일한 클래스 내에 동일한 이름의 생성자 혹은 메소드를 작성하지 못한다.
   - 하지만 매개변수 타입, 갯수, 순서(즉, 시그니처)를 다르게 작성하면 서로 다른 생성자나 메소드로 인식
   - 매개변수 타입, 갯수, 순서(즉, 시그니처)를 다르게 하여 동일한 이름으로 여러 개의 생성자나 메소드를 작성하는 오버로딩이라고 함.
