[250512] edit training_log

--- a/trainig_log/250512.md
+++ b/trainig_log/250512.md
@@ -92,6 +92,7 @@
 - Generic
   - 데이터의 타입을 일반화 하는 것
   - 데이터의 형식에 의존하지 않고 하나의 값이 여러 다른 데이터 타입들을 가질 수 있어 재사용성이 높다.
+  - 타입 파라미터로 명시할 수 있는 것은 참조 타입 밖에 없다.
   - 선언 예시
     ````
     // 일반적으로 <> (다이아몬드 연산자) 안에 T 알파벳을 사용한다. (모든 알파벳이 들어올 수는 있다.)
@@ -118,8 +119,8 @@
       ````
   - 와일드카드
     - 제네릭 클래스 타입의 객체를 메소드의 매개변수로 받을 때, 그 객체의 타입 변수를 제한
-    - <? extends Type> : 와일드카드의 상한 제한(Type 클래스보다 하위 클래스만 상속 가능)
-    - <? super Type> : 와일드카드의 하한 제한(Type 클래스보다 상위 클래스만 상속 가능)
+    - `<? extends Type>` : 와일드카드의 상한 제한(Type 클래스보다 하위 클래스만 상속 가능)
+    - `<? super Type>` : 와일드카드의 하한 제한(Type 클래스보다 상위 클래스만 상속 가능)
   
 ## 💻 실습 예시
 
